# bsw-test-event_walker

./: .env.bet  .env.provider  .flake8  Makefile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: main.yml
bet-maker/: Makefile  bet.Dockerfile  docker-compose.test.yml  pyproject.toml
bet-maker/alembic/: env.py
bet-maker/alembic/versions/: 3add2125fd10_init.py  50133dab61df_init.py
bet-maker/app/: consumer.py  dependency.py  main.py  settings.py  utils.py
bet-maker/app/bets/: exception.py  handlers.py  models.py  schema.py  service.py
bet-maker/app/bets/repository/: __init__.py  bet.py
bet-maker/app/infrastructure/database/: accessor.py
bet-maker/tests/: conftest.py
bet-maker/tests/fixtures/: infrastructure.py  settings.py
bet-maker/tests/fixtures/bets/: bets_repository.py  bets_schema.py  bets_service.py
bet-maker/tests/unit/bets/: test_bets_service.py
line-provider/: Makefile  docker-compose.test.yml  provider.Dockerfile  pyproject.toml
line-provider/app/: consumer.py  main.py  settings.py  utils.py
line-provider/app/event/: dependency.py  handlers.py  repository.py  schema.py  service.py  wrappers.py
line-provider/app/infrastructure/broker/: __init__.py  accessor.py
line-provider/app/infrastructure/redis/: accessor.py
line-provider/tests/: conftest.py
line-provider/tests/fixtures/: infrastructure.py  settings.py
line-provider/tests/fixtures/event/: event_repository.py  event_schema.py  event_service.py
line-provider/tests/integration/event/: test_event_service.py
line-provider/tests/unit/event/: test_event_service.py
