[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["Dr1DeX"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
aio-pika = "^9.4.2"
redis = "^5.0.8"
pytest = "^8.3.2"
pytest-twisted = "^1.14.2"
pytest-asyncio = "^0.23.8"
anyio = "^4.4.0"
twisted = "^24.3.0"
faker = "^26.1.0"
pytest-factoryboy = "^2.7.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
